Fix overflows

--- a/src/app/Files/file-table/file-table.component.css
+++ b/src/app/Files/file-table/file-table.component.css
@@ -1,9 +1,4 @@
-.example-container {
-  display: flex;
-  flex-direction: column;
-  max-height: 500px;
-  min-width: 300px;
-}
+
 
 .example-header {
   min-height: 64px;
@@ -21,7 +16,7 @@
 
 table {
   overflow: auto;
-  max-height: 500px;
+  min-width: 100%;
 }
 
 .element-row {
@@ -137,7 +132,10 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 
-
+div.table-container {
+  max-height: 500px;
+  overflow: auto;
+}
 
 
 
